# envCleaner

./: README.md  pyproject.toml
.github/workflows/: pypi_upload.yml
envcleaner/: main.py  utils.py
envcleaner/cleaners/: base.py  venv.py
